// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackupScreen renders backup options when none are completed 1`] = `
<View
  sentry-label="Screen"
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "display": "flex",
        "flex": 1,
      },
      {
        "paddingTop": 200,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        [
          {
            "flex": 1,
            "justifyContent": "flex-end",
          },
          {
            "marginBottom": undefined,
          },
        ],
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      entering={BaseAnimationMock {}}
      exiting={BaseAnimationMock {}}
      sentry-label="Flex"
      style={
        [
          {
            "alignItems": "stretch",
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 1,
            "justifyContent": "flex-start",
            "paddingBottom": 16,
            "paddingHorizontal": 16,
          },
        ]
      }
    >
      <View
        sentry-label="Flex"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "justifyContent": "center",
              "margin": 12,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.2}
          style={
            [
              {
                "color": "#222222",
                "display": "flex",
                "fontFamily": "Inter-Medium",
                "fontSize": 24,
                "lineHeight": 28,
                "paddingTop": 0,
                "textAlign": "center",
              },
            ]
          }
        >
          Choose a backup for your wallet
        </Text>
        <View
          style={
            [
              {
                "display": "flex",
                "flexGrow": 0,
                "flexShrink": 0,
                "height": 12,
              },
            ]
          }
        />
        <Text
          allowFontScaling={true}
          maxFontSizeMultiplier={1.4}
          style={
            [
              {
                "color": "#7D7D7D",
                "display": "flex",
                "fontFamily": "Inter-Regular",
                "fontSize": 15,
                "lineHeight": 20,
                "textAlign": "center",
              },
            ]
          }
        >
          Remember, backups are your lifeline. They're your ticket back in if something goes wrong.
        </Text>
      </View>
      <View
        style={
          [
            {
              "display": "flex",
              "flexGrow": 0,
              "flexShrink": 0,
              "height": 16,
            },
          ]
        }
      />
      <View
        sentry-label="Flex"
        style={
          [
            {
              "alignItems": "stretch",
              "display": "flex",
              "flex": 1,
              "flexDirection": "column",
              "flexGrow": 1,
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <View
          sentry-label="Flex"
          style={
            [
              {
                "alignItems": "stretch",
                "display": "flex",
                "flexDirection": "column",
                "flexGrow": 1,
                "justifyContent": "space-between",
              },
            ]
          }
        >
          <View
            sentry-label="Flex"
            style={
              [
                {
                  "alignItems": "stretch",
                  "display": "flex",
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={
                {
                  "bottom": 5,
                  "left": 5,
                  "right": 5,
                  "top": 5,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "backgroundColor": "#F9F9F9",
                  "borderColor": "#2222220D",
                  "borderRadius": 20,
                  "borderWidth": 1,
                  "display": "flex",
                  "opacity": 1,
                  "padding": 16,
                }
              }
              testID="add-icloud-backup"
            >
              <View
                sentry-label="Flex"
                style={
                  [
                    {
                      "alignContent": "center",
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "justifyContent": "flex-start",
                    },
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "#FC72FF1f",
                        "borderRadius": 999999,
                        "display": "flex",
                        "height": 36,
                        "justifyContent": "center",
                        "padding": 16,
                        "width": 36,
                      },
                    ]
                  }
                >
                  <svg
                    color="#FC72FF"
                    data-file-name="SvgCloud"
                    height={16}
                  />
                </View>
                <View
                  style={
                    [
                      {
                        "display": "flex",
                        "flexGrow": 0,
                        "flexShrink": 0,
                        "height": 16,
                        "width": 16,
                      },
                    ]
                  }
                />
                <View
                  sentry-label="Flex"
                  style={
                    [
                      {
                        "alignItems": "center",
                        "display": "flex",
                        "flexDirection": "row",
                        "justifyContent": "flex-start",
                        "paddingRight": 60,
                      },
                    ]
                  }
                >
                  <View
                    sentry-label="Flex"
                    style={
                      [
                        {
                          "alignItems": "flex-start",
                          "display": "flex",
                          "flex": 1,
                          "flexDirection": "column",
                          "justifyContent": "space-around",
                        },
                      ]
                    }
                  >
                    <View
                      sentry-label="Flex"
                      style={
                        [
                          {
                            "alignItems": "stretch",
                            "display": "flex",
                            "flexDirection": "row",
                            "justifyContent": "flex-start",
                          },
                        ]
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        maxFontSizeMultiplier={1.4}
                        style={
                          [
                            {
                              "color": "#222222",
                              "display": "flex",
                              "fontFamily": "Inter-Medium",
                              "fontSize": 17,
                              "lineHeight": 24,
                            },
                          ]
                        }
                      >
                        Backup with iCloud
                      </Text>
                    </View>
                    <View
                      style={
                        [
                          {
                            "display": "flex",
                            "flexGrow": 0,
                            "flexShrink": 0,
                            "height": 4,
                          },
                        ]
                      }
                    />
                    <Text
                      allowFontScaling={false}
                      maxFontSizeMultiplier={1.4}
                      style={
                        [
                          {
                            "color": "#7D7D7D",
                            "display": "flex",
                            "fontFamily": "Inter-Regular",
                            "fontSize": 15,
                            "lineHeight": 20,
                          },
                        ]
                      }
                    >
                      Safe, simple, and all you need to save is your password.
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "display": "flex",
                    "flexGrow": 0,
                    "flexShrink": 0,
                    "height": 12,
                  },
                ]
              }
            />
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={
                {
                  "bottom": 5,
                  "left": 5,
                  "right": 5,
                  "top": 5,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "backgroundColor": "#F9F9F9",
                  "borderColor": "#2222220D",
                  "borderRadius": 20,
                  "borderWidth": 1,
                  "display": "flex",
                  "opacity": 1,
                  "padding": 16,
                }
              }
              testID="add-manual-backup"
            >
              <View
                sentry-label="Flex"
                style={
                  [
                    {
                      "alignContent": "center",
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "justifyContent": "flex-start",
                    },
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "#FC72FF1f",
                        "borderRadius": 999999,
                        "display": "flex",
                        "height": 36,
                        "justifyContent": "center",
                        "padding": 16,
                        "width": 36,
                      },
                    ]
                  }
                >
                  <svg
                    color="#FC72FF"
                    data-file-name="SvgPaperStack"
                    height={16}
                  />
                </View>
                <View
                  style={
                    [
                      {
                        "display": "flex",
                        "flexGrow": 0,
                        "flexShrink": 0,
                        "height": 16,
                        "width": 16,
                      },
                    ]
                  }
                />
                <View
                  sentry-label="Flex"
                  style={
                    [
                      {
                        "alignItems": "center",
                        "display": "flex",
                        "flexDirection": "row",
                        "justifyContent": "flex-start",
                        "paddingRight": 60,
                      },
                    ]
                  }
                >
                  <View
                    sentry-label="Flex"
                    style={
                      [
                        {
                          "alignItems": "flex-start",
                          "display": "flex",
                          "flex": 1,
                          "flexDirection": "column",
                          "justifyContent": "space-around",
                        },
                      ]
                    }
                  >
                    <View
                      sentry-label="Flex"
                      style={
                        [
                          {
                            "alignItems": "stretch",
                            "display": "flex",
                            "flexDirection": "row",
                            "justifyContent": "flex-start",
                          },
                        ]
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        maxFontSizeMultiplier={1.4}
                        style={
                          [
                            {
                              "color": "#222222",
                              "display": "flex",
                              "fontFamily": "Inter-Medium",
                              "fontSize": 17,
                              "lineHeight": 24,
                            },
                          ]
                        }
                      >
                        Backup with recovery phrase
                      </Text>
                    </View>
                    <View
                      style={
                        [
                          {
                            "display": "flex",
                            "flexGrow": 0,
                            "flexShrink": 0,
                            "height": 4,
                          },
                        ]
                      }
                    />
                    <Text
                      allowFontScaling={false}
                      maxFontSizeMultiplier={1.4}
                      style={
                        [
                          {
                            "color": "#7D7D7D",
                            "display": "flex",
                            "fontFamily": "Inter-Regular",
                            "fontSize": 15,
                            "lineHeight": 20,
                          },
                        ]
                      }
                    >
                      Top-notch security with no third parties. You're in control.
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              [
                {
                  "display": "flex",
                  "flexGrow": 0,
                  "flexShrink": 0,
                  "height": 16,
                },
              ]
            }
          />
          <View
            sentry-label="Flex"
            style={
              [
                {
                  "alignItems": "stretch",
                  "display": "flex",
                  "flexDirection": "column",
                  "flexGrow": 1,
                  "justifyContent": "flex-end",
                },
              ]
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={
                {
                  "bottom": 5,
                  "left": 5,
                  "right": 5,
                  "top": 5,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignSelf": "center",
                  "display": "flex",
                  "opacity": 1,
                  "paddingVertical": 0,
                }
              }
            >
              <View
                sentry-label="Flex"
                style={
                  [
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <svg
                  color="#7D7D7D"
                  data-file-name="SvgInfoCircle"
                  height={24}
                  width={24}
                />
                <View
                  style={
                    [
                      {
                        "display": "flex",
                        "flexGrow": 0,
                        "flexShrink": 0,
                        "height": 4,
                        "width": 4,
                      },
                    ]
                  }
                />
                <Text
                  allowFontScaling={true}
                  maxFontSizeMultiplier={1.4}
                  style={
                    [
                      {
                        "color": "#222222",
                        "display": "flex",
                        "fontFamily": "Inter-Medium",
                        "fontSize": 15,
                        "lineHeight": 20,
                      },
                    ]
                  }
                >
                  Learn about wallet safety and recovery
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "display": "flex",
                    "flexGrow": 0,
                    "flexShrink": 0,
                    "height": 16,
                  },
                ]
              }
            />
            <View
              accessibilityState={
                {
                  "disabled": true,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={
                {
                  "bottom": 5,
                  "left": 5,
                  "right": 5,
                  "top": 5,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FC72FF",
                  "borderColor": "transparent",
                  "borderRadius": 16,
                  "borderWidth": 1,
                  "display": "flex",
                  "opacity": 0.4,
                }
              }
            >
              <View
                sentry-label="Flex"
                style={
                  [
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "justifyContent": "flex-start",
                      "paddingHorizontal": 12,
                      "paddingVertical": 12,
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={true}
                  maxFontSizeMultiplier={1.2}
                  style={
                    [
                      {
                        "color": "#FFFFFF",
                        "display": "flex",
                        "fontFamily": "Inter-SemiBold",
                        "fontSize": 17,
                        "lineHeight": 20,
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Select backup to continue
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`BackupScreen renders backup options when some are completed 1`] = `
<View
  sentry-label="Screen"
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "display": "flex",
        "flex": 1,
      },
      {
        "paddingTop": 200,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        [
          {
            "flex": 1,
            "justifyContent": "flex-end",
          },
          {
            "marginBottom": undefined,
          },
        ],
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      entering={BaseAnimationMock {}}
      exiting={BaseAnimationMock {}}
      sentry-label="Flex"
      style={
        [
          {
            "alignItems": "stretch",
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 1,
            "justifyContent": "flex-start",
            "paddingBottom": 16,
            "paddingHorizontal": 16,
          },
        ]
      }
    >
      <View
        sentry-label="Flex"
        style={
          [
            {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "justifyContent": "center",
              "margin": 12,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.2}
          style={
            [
              {
                "color": "#222222",
                "display": "flex",
                "fontFamily": "Inter-Medium",
                "fontSize": 24,
                "lineHeight": 28,
                "paddingTop": 0,
                "textAlign": "center",
              },
            ]
          }
        >
          Choose a backup for your wallet
        </Text>
        <View
          style={
            [
              {
                "display": "flex",
                "flexGrow": 0,
                "flexShrink": 0,
                "height": 12,
              },
            ]
          }
        />
        <Text
          allowFontScaling={true}
          maxFontSizeMultiplier={1.4}
          style={
            [
              {
                "color": "#7D7D7D",
                "display": "flex",
                "fontFamily": "Inter-Regular",
                "fontSize": 15,
                "lineHeight": 20,
                "textAlign": "center",
              },
            ]
          }
        >
          Remember, backups are your lifeline. They're your ticket back in if something goes wrong.
        </Text>
      </View>
      <View
        style={
          [
            {
              "display": "flex",
              "flexGrow": 0,
              "flexShrink": 0,
              "height": 16,
            },
          ]
        }
      />
      <View
        sentry-label="Flex"
        style={
          [
            {
              "alignItems": "stretch",
              "display": "flex",
              "flex": 1,
              "flexDirection": "column",
              "flexGrow": 1,
              "justifyContent": "space-between",
            },
          ]
        }
      >
        <View
          sentry-label="Flex"
          style={
            [
              {
                "alignItems": "stretch",
                "display": "flex",
                "flexDirection": "column",
                "flexGrow": 1,
                "justifyContent": "space-between",
              },
            ]
          }
        >
          <View
            sentry-label="Flex"
            style={
              [
                {
                  "alignItems": "stretch",
                  "display": "flex",
                  "flexDirection": "column",
                  "justifyContent": "flex-start",
                },
              ]
            }
          >
            <View
              accessibilityState={
                {
                  "disabled": true,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={
                {
                  "bottom": 5,
                  "left": 5,
                  "right": 5,
                  "top": 5,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "backgroundColor": "#F9F9F9",
                  "borderColor": "#2222220D",
                  "borderRadius": 20,
                  "borderWidth": 1,
                  "display": "flex",
                  "opacity": 0.5,
                  "padding": 16,
                }
              }
              testID="add-icloud-backup"
            >
              <View
                sentry-label="Flex"
                style={
                  [
                    {
                      "alignContent": "center",
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "justifyContent": "flex-start",
                    },
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "#FC72FF1f",
                        "borderRadius": 999999,
                        "display": "flex",
                        "height": 36,
                        "justifyContent": "center",
                        "padding": 16,
                        "width": 36,
                      },
                    ]
                  }
                >
                  <svg
                    color="#FC72FF"
                    data-file-name="SvgCloud"
                    height={16}
                  />
                </View>
                <View
                  style={
                    [
                      {
                        "display": "flex",
                        "flexGrow": 0,
                        "flexShrink": 0,
                        "height": 16,
                        "width": 16,
                      },
                    ]
                  }
                />
                <View
                  sentry-label="Flex"
                  style={
                    [
                      {
                        "alignItems": "center",
                        "display": "flex",
                        "flexDirection": "row",
                        "justifyContent": "flex-start",
                        "paddingRight": 60,
                      },
                    ]
                  }
                >
                  <View
                    sentry-label="Flex"
                    style={
                      [
                        {
                          "alignItems": "flex-start",
                          "display": "flex",
                          "flex": 1,
                          "flexDirection": "column",
                          "justifyContent": "space-around",
                        },
                      ]
                    }
                  >
                    <View
                      sentry-label="Flex"
                      style={
                        [
                          {
                            "alignItems": "stretch",
                            "display": "flex",
                            "flexDirection": "row",
                            "justifyContent": "flex-start",
                          },
                        ]
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        maxFontSizeMultiplier={1.4}
                        style={
                          [
                            {
                              "color": "#222222",
                              "display": "flex",
                              "fontFamily": "Inter-Medium",
                              "fontSize": 17,
                              "lineHeight": 24,
                            },
                          ]
                        }
                      >
                        Backup with iCloud
                      </Text>
                    </View>
                    <View
                      style={
                        [
                          {
                            "display": "flex",
                            "flexGrow": 0,
                            "flexShrink": 0,
                            "height": 4,
                          },
                        ]
                      }
                    />
                    <Text
                      allowFontScaling={false}
                      maxFontSizeMultiplier={1.4}
                      style={
                        [
                          {
                            "color": "#7D7D7D",
                            "display": "flex",
                            "fontFamily": "Inter-Regular",
                            "fontSize": 15,
                            "lineHeight": 20,
                          },
                        ]
                      }
                    >
                      Safe, simple, and all you need to save is your password.
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "display": "flex",
                    "flexGrow": 0,
                    "flexShrink": 0,
                    "height": 12,
                  },
                ]
              }
            />
            <View
              accessibilityState={
                {
                  "disabled": false,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={
                {
                  "bottom": 5,
                  "left": 5,
                  "right": 5,
                  "top": 5,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "backgroundColor": "#F9F9F9",
                  "borderColor": "#2222220D",
                  "borderRadius": 20,
                  "borderWidth": 1,
                  "display": "flex",
                  "opacity": 1,
                  "padding": 16,
                }
              }
              testID="add-manual-backup"
            >
              <View
                sentry-label="Flex"
                style={
                  [
                    {
                      "alignContent": "center",
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "justifyContent": "flex-start",
                    },
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "#FC72FF1f",
                        "borderRadius": 999999,
                        "display": "flex",
                        "height": 36,
                        "justifyContent": "center",
                        "padding": 16,
                        "width": 36,
                      },
                    ]
                  }
                >
                  <svg
                    color="#FC72FF"
                    data-file-name="SvgPaperStack"
                    height={16}
                  />
                </View>
                <View
                  style={
                    [
                      {
                        "display": "flex",
                        "flexGrow": 0,
                        "flexShrink": 0,
                        "height": 16,
                        "width": 16,
                      },
                    ]
                  }
                />
                <View
                  sentry-label="Flex"
                  style={
                    [
                      {
                        "alignItems": "center",
                        "display": "flex",
                        "flexDirection": "row",
                        "justifyContent": "flex-start",
                        "paddingRight": 60,
                      },
                    ]
                  }
                >
                  <View
                    sentry-label="Flex"
                    style={
                      [
                        {
                          "alignItems": "flex-start",
                          "display": "flex",
                          "flex": 1,
                          "flexDirection": "column",
                          "justifyContent": "space-around",
                        },
                      ]
                    }
                  >
                    <View
                      sentry-label="Flex"
                      style={
                        [
                          {
                            "alignItems": "stretch",
                            "display": "flex",
                            "flexDirection": "row",
                            "justifyContent": "flex-start",
                          },
                        ]
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        maxFontSizeMultiplier={1.4}
                        style={
                          [
                            {
                              "color": "#222222",
                              "display": "flex",
                              "fontFamily": "Inter-Medium",
                              "fontSize": 17,
                              "lineHeight": 24,
                            },
                          ]
                        }
                      >
                        Backup with recovery phrase
                      </Text>
                    </View>
                    <View
                      style={
                        [
                          {
                            "display": "flex",
                            "flexGrow": 0,
                            "flexShrink": 0,
                            "height": 4,
                          },
                        ]
                      }
                    />
                    <Text
                      allowFontScaling={false}
                      maxFontSizeMultiplier={1.4}
                      style={
                        [
                          {
                            "color": "#7D7D7D",
                            "display": "flex",
                            "fontFamily": "Inter-Regular",
                            "fontSize": 15,
                            "lineHeight": 20,
                          },
                        ]
                      }
                    >
                      Top-notch security with no third parties. You're in control.
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            style={
              [
                {
                  "display": "flex",
                  "flexGrow": 0,
                  "flexShrink": 0,
                  "height": 16,
                },
              ]
            }
          />
          <View
            sentry-label="Flex"
            style={
              [
                {
                  "alignItems": "stretch",
                  "display": "flex",
                  "flexDirection": "column",
                  "flexGrow": 1,
                  "justifyContent": "flex-end",
                },
              ]
            }
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={
                {
                  "bottom": 5,
                  "left": 5,
                  "right": 5,
                  "top": 5,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignSelf": "center",
                  "display": "flex",
                  "opacity": 1,
                  "paddingVertical": 0,
                }
              }
            >
              <View
                sentry-label="Flex"
                style={
                  [
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <svg
                  color="#7D7D7D"
                  data-file-name="SvgInfoCircle"
                  height={24}
                  width={24}
                />
                <View
                  style={
                    [
                      {
                        "display": "flex",
                        "flexGrow": 0,
                        "flexShrink": 0,
                        "height": 4,
                        "width": 4,
                      },
                    ]
                  }
                />
                <Text
                  allowFontScaling={true}
                  maxFontSizeMultiplier={1.4}
                  style={
                    [
                      {
                        "color": "#222222",
                        "display": "flex",
                        "fontFamily": "Inter-Medium",
                        "fontSize": 15,
                        "lineHeight": 20,
                      },
                    ]
                  }
                >
                  Learn about wallet safety and recovery
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "display": "flex",
                    "flexGrow": 0,
                    "flexShrink": 0,
                    "height": 16,
                  },
                ]
              }
            />
            <View
              accessibilityState={
                {
                  "disabled": false,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={
                {
                  "bottom": 5,
                  "left": 5,
                  "right": 5,
                  "top": 5,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FC72FF",
                  "borderColor": "transparent",
                  "borderRadius": 16,
                  "borderWidth": 1,
                  "display": "flex",
                  "opacity": 1,
                }
              }
            >
              <View
                sentry-label="Flex"
                style={
                  [
                    {
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "justifyContent": "flex-start",
                      "paddingHorizontal": 12,
                      "paddingVertical": 12,
                    },
                  ]
                }
              >
                <Text
                  allowFontScaling={true}
                  maxFontSizeMultiplier={1.2}
                  style={
                    [
                      {
                        "color": "#FFFFFF",
                        "display": "flex",
                        "fontFamily": "Inter-SemiBold",
                        "fontSize": 17,
                        "lineHeight": 20,
                        "textAlign": "center",
                      },
                    ]
                  }
                >
                  Continue
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
